--- a/index.html
+++ b/index.html
@@ -1,82 +1,49 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Inicio - turnosdefarmacias.info</title>
-  <style>
-    body {
-      margin: 0;
-      padding: 20px;
-      background-color: #007BFF;
-      font-family: Arial, sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-    h1 {
-      color: white;
-      margin-bottom: 40px;
-    }
-    .button-grid {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 20px;
-      max-width: 1000px;
-    }
-    .btn {
-      padding: 20px 40px;
-      font-size: 1.1em;
-      font-weight: bold;
-      border-radius: 12px;
-      cursor: pointer;
-      border: 2px solid white;
-      min-width: 220px;
-      transition: all 0.3s ease;
-      text-align: center;
-      text-decoration: none;
-    }
-    .azul { background-color: #007BFF; color: white; }
-    .celeste { background-color: #00cfff; color: black; }
-    .verde { background-color: #4CAF50; color: black; }
-    .rojo { background-color: #f44336; color: black; }
-    .verdeagua { background-color: #7FFFD4; color: black; }
-    .rosado { background-color: #FFB6C1; color: black; }
-    .azuloscuro { background-color: #102c54; color: white; }
-    .chrome { background-color: #DB4437; color: white; }
-    .pride {
-      background: linear-gradient(to right, red, orange, yellow, green, blue, indigo, violet);
-      color: black;
-      font-weight: bold;
-      border: none;
-      border-radius: 8px;
-    }
-    .btn:hover {
-      opacity: 0.9;
-    }
-  </style>
-  <script>
-    function abrirUnicaVentana(nombre, url) {
-      window.open(url, nombre, 'width=1000,height=700,resizable=yes,scrollbars=yes');
-    }
-  </script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Generar Ticket</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+        }
+        .ticket {
+            width: 300px;
+            padding: 10px;
+            border: 1px solid #000;
+            margin-top: 20px;
+        }
+        .hidden {
+            display: none;
+        }
+    </style>
 </head>
 <body>
-  <h1>FARMACIA PINTAR</h1>
-  <div class="button-grid">
-    <button class="btn celeste" onclick="abrirUnicaVentana('mercadopago', 'https://www.mercadopago.com.ar/collections')">MERCADO PAGO</button>
-    <button class="btn azul" onclick="abrirUnicaVentana('genericos', 'https://script.google.com/macros/s/AKfycbxLOXkGX-UoZA38KEGFzbjOASybp_YoOxlGYhDZyZWtzNKuuVZZRDPUVzuFewaz9-mCjw/exec')">GENÉRICOS</button>
-    <button class="btn azul" onclick="abrirUnicaVentana('panales', 'https://panales.turnosdefarmacias.info/')">PAÑALERA</button>
-    <button class="btn verde" onclick="abrirUnicaVentana('colegio', 'https://www.colfarmaonline.org.ar')">COLEGIO</button>
-    <button class="btn rojo" onclick="abrirUnicaVentana('plataforma', 'http://ctacte.cofasa.com.ar')">PLATAFORMA</button>
-    <button class="btn verdeagua" onclick="abrirUnicaVentana('iosfa_recetas', 'https://www.misvalidaciones.com.ar/')">IOSFA RECETAS</button>
-    <button class="btn verdeagua" onclick="abrirUnicaVentana('iosfa_afiliado', 'https://validador.iosfa.gob.ar/ValidadorSUA1')">IOSFA CONSULTA DE AFILIADO</button>
-    <button class="btn rosado" onclick="abrirUnicaVentana('meppes', 'http://sistemasl.ioma.gba.gov.ar/sistemas/meppes_farmacias/index.php')">MEPPES</button>
-    <button class="btn azul" onclick="abrirUnicaVentana('turnos', 'https://www.turnosdefarmacias.info/')">TURNOS</button>
-    <button class="btn azuloscuro" onclick="abrirUnicaVentana('farmasun', 'https://app.drogueriafarmasun.com.ar/login')">FARMASUN</button>
-    <button class="btn chrome" onclick="abrirUnicaVentana('gmail', 'https://mail.google.com/mail/u/1/')">LEKARNA MAIL</button>
-    <button class="btn pride" onclick="abrirUnicaVentana('osde', 'https://extranet.osde.com.ar/OSDEExtranet/jsp/multiempresas/osde/HomePublicaJuridicaV2.jsp')">OSDE VICENTE</button>
-  </div>
+    <h2>Sistema de Tickets</h2>
+    <button onclick="generarTicket()">Generar Ticket</button>
+    <div id="ticket" class="ticket hidden">
+        <h3>Ticket</h3>
+        <p id="contenidoTicket"></p>
+        <button onclick="imprimirTicket()">Imprimir</button>
+    </div>
+    <script>
+        function generarTicket() {
+            let contenido = "Producto: Ejemplo\nPrecio: $100\nFecha: " + new Date().toLocaleString();
+            document.getElementById("contenidoTicket").innerText = contenido;
+            document.getElementById("ticket").classList.remove("hidden");
+        }
+
+        function imprimirTicket() {
+            let contenido = document.getElementById("ticket").innerHTML;
+            let ventanaImpresion = window.open('', '', 'width=300,height=400');
+            ventanaImpresion.document.write('<html><head><title>Imprimir Ticket</title></head><body>');
+            ventanaImpresion.document.write(contenido);
+            ventanaImpresion.document.write('</body></html>');
+            ventanaImpresion.document.close();
+            ventanaImpresion.print();
+        }
+    </script>
 </body>
 </html>
