--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       position: fixed;
       right: 10px;
       top: 10px;
-      width: 300px;
+      width: 350px;
       background: white;
       padding: 20px;
       box-shadow: -2px 0 10px rgba(0, 0, 0, 0.1);
@@ -52,21 +52,24 @@
       border: 2px solid black;
     }
     .ticket {
-      width: 250px;
+      width: 300px;
       font-family: Arial, sans-serif;
       text-align: center;
       border: 2px solid black;
       padding: 10px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
     }
     .ticket .header,
     .ticket .footer {
-      font-size: 12px;
+      font-size: 14px;
       font-weight: bold;
     }
     .ticket .middle {
-      font-size: 16px;
+      font-size: 18px;
       font-weight: bold;
-      margin: 10px 0;
+      margin: 15px 0;
     }
   </style>
   <script>
@@ -81,7 +84,7 @@
             <style>
               body { font-family: Arial, sans-serif; text-align: center; }
               .ticket {
-                width: 250px;
+                width: 80mm;
                 border: 2px solid black;
                 padding: 10px;
                 display: flex;
@@ -89,13 +92,13 @@
                 align-items: center;
               }
               .header, .footer {
-                font-size: 12px;
+                font-size: 14px;
                 font-weight: bold;
               }
               .middle {
-                font-size: 16px;
+                font-size: 20px;
                 font-weight: bold;
-                margin: 10px 0;
+                margin: 20px 0;
               }
             </style>
           </head>
