--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
       transition: all 0.3s ease;
       text-align: center;
       text-decoration: none;
+      background-color: white;
+      color: black;
+    }
+    .btn:hover {
+      background-color: #ddd;
     }
     #ticket-panel {
       position: fixed;
@@ -52,7 +57,7 @@
       border: 2px solid black;
     }
     .ticket {
-      width: 300px;
+      width: 80mm;
       font-family: Arial, sans-serif;
       text-align: center;
       border: 2px solid black;
@@ -76,7 +81,7 @@
     function imprimirTicket() {
       let precio = document.getElementById('precio').value;
       if (precio) {
-        let ventana = window.open('', '_blank');
+        let ventana = window.open('', '_blank', 'width=300,height=600');
         ventana.document.write(`
           <html>
           <head>
@@ -132,6 +137,12 @@
 </head>
 <body>
   <h1>PRUEBA - FARMACIA PINTAR</h1>
+  <div class="button-grid">
+    <a href="#" class="btn">Botón 1</a>
+    <a href="#" class="btn">Botón 2</a>
+    <a href="#" class="btn">Botón 3</a>
+    <a href="#" class="btn">Mercado Pago</a>
+  </div>
   <div id="ticket-panel">
     <h2>Generar Ticket</h2>
     <label for="precio">Precio:</label>
